SDC-423 - Increase permgen size
Change-Id: I8f8df4a6a08e891794584756ea1493859508fa74